# micro-projection

./: .gitignore  README.md  RECONCILIATION.md  benchmark_blender_reconstruction_improvements.py  outputs.py  perspective_correction.ipynb  pyproject.toml  recording.py  requirements.txt  runner.py  solver.py  verify_blender_reconstruction.py
app/: pyproject.toml
app/src/microprojection/: __main__.py  app.py
app/src/microprojection/acquisition/: projector.py
app/src/microprojection/calibration/: priors.py
app/src/microprojection/core/: paper_specs.py
app/src/microprojection/export/: __init__.py  report.py
app/src/microprojection/processing/: steps.py
app/src/microprojection/ui/: main_window.py  projector_window.py  styles.py
app/src/microprojection/ui/panels/: parameter_panel.py  projector_panel.py
app/src/microprojection/ui/tabs/: calibration_tab.py
blender/: blender_projector_capture.py
blendersim/: benchmark_blender_reconstruction_improvements.py  blender_projector_capture.py  render_setup_overview.py  verify_blender_reconstruction.py
docs/: Fringe Projection System - Complete Analysis.md  README.md  Roughness Measurement Results.md  Tasks.md
projection_simulation/: app.py  cli.py  opengl_renderer.py  render_scene.py  window.py
projection_simulation/core/: __init__.py  constants.py  fringe.py  math3d.py  profiling.py
projection_simulation/geometry/: camera_navigation.py  optics_geometry.py
projection_simulation/rendering/: device_dimensions.py  device_rendering.py  grid_rendering.py  opengl_renderer.py  opengl_shaders.py  projection_mapping.py  projection_raycasting.py  scene_assembly.py
projection_simulation/scanning/: __init__.py  reconstruction.py  scan_pipeline.py
projection_simulation/ui/: application.py  controls.py  reconstruction_view.py  surface_camera.py  viewport_scan.py  window.py
scripts/: README.md  fringe_capture_video.py  gt_recon_error.py  roughness_analysis.py  verify_surface_occlusion.py
shared/: synthetic_surfaces.py
simulation/: .gitignore  README.md  blender_projector_capture.py  geometry.py  outputs.py  reconstruction.py  render_setup_overview.py  runner.py  verify_blender_reconstruction.py
simulation/blender/: benchmark.py  render_setup_overview.py
tools/: benchmark_blender_reconstruction_improvements.py  blender_projector_capture.py  verify_blender_reconstruction.py
(+43 files in other folders)
