[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microprojection"
version = "0.1.0"
description = "Fringe projection profilometry instrument GUI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "numpy",
]

[project.scripts]
microprojection = "microprojection.app:main"

[tool.setuptools.packages.find]
where = ["src"]
